[project]
name = "health-tool-mcp-server"
version = "0.1.0"
description = "MCP server for Ballerina Health Tool - FHIR package generation and template generation"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
